--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -2,21 +2,179 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$light_yellow: #FFF576;
+$post_yellow: rgb(238, 240, 121);
+//$light_yellow: rgb(238, 240, 134);
+//rgb(255, 253, 118);rgb(238, 240, 134);
+body {
+    background-color: $post_yellow;
+    font-family: sans-serif;
+    color: #0080a8;
+    height:100%;
+    width:92%;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
+}
+
+.notes_logo{
+    margin-top: 10px;
+    margin-left:13px;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+    -moz-box-shadow: 0 6px 6px -6px black;
+    box-shadow: 0 6px 6px -6px black;
+    transition: box-shadow 0.3s ease-in-out;
+    grid-row-start:1;
+    background-color: $light_yellow;
+    background-image: url("./notes_logo_2.png");
+    background-repeat: no-repeat, repeat;
+    background-size:contain;
+    color: #0080a8;
+    height:100px;
+    width:95px;
+
+    &:hover{
+        box-shadow: 0 11px 4px rgba(66, 66, 66, 0.3);
+    }
+}
+
+.trash_note{
+    position:absolute;
+    background-image: url("./trash_closed.png"); 
+    height:29px;
+    width:23px;
+    background-color: $light_yellow;
+    background-repeat: no-repeat, repeat;
+    background-size:contain;
+    color:rgb(0, 0, 0);
+    right:5px;
+    top:3px;  
+
+    &:hover{
+        background-image: url("./trash_lid.png"); 
+        height:28px;
+        width:22px;
+        top:4px;
+        right:6px;  
+    }
+
+    &:active{
+        background-image: url("./trash_closed.png"); 
+    }
+    &:focus{
+        background-image: url("./trash_closed.png"); 
+    }
+}
+
+
+textarea {
+    background-color: $post_yellow;
+    resize: none;
+    border: none;
+    outline: none;
+    font-family: sans-serif;
+    height:100%;
+}
+
 #app {
     display:grid;
-    background-color: rgb(238, 240, 134);
-    grid-template-columns: 30%;
-    grid-template-rows: 0% 3%;
+    background-color: $post_yellow;
+    grid-template-columns: 120px 180px;
+    grid-template-rows: 0% 3% 8.5% 70%;
+    height:1000px;
+    width:100%;
 }
 
 .list {
-    padding: 3%;
+    display:block;
+    margin-top:10px;
+    padding: 6%;
+    font-size:0.8em;
     grid-column: 1 / span 1;
-    grid-row-start: 2;
+    grid-row: 4/span 2;
+    margin-left:1px;
+    text-align:center;
+    line-height: 17px;
+}
+
+.new_note{
+    position:relative;
+    font-size:1em;
+    margin-top:10px;
+    padding-top:18px;
+    padding-left:10px;
+    width:100%;
+    height:20px;
+    background: $light_yellow;
+    grid-row-start: 1;
+    grid-column: 2/ span 5;
+    margin-left:13px;
+    opacity:2;
+    box-shadow: 0 3px 2px rgba(66, 66, 66, 0.3);
+    transition: box-shadow 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
+
+    &:hover {
+        box-shadow: 0 1px 1px rgba(66, 66, 66, 0.3);
+    }
+
+    p { 
+        position: absolute;
+        bottom:0px;
+        top:-7px;
+        
+        &:hover {
+            color: #0081a8e1;
+        }
+    }
+ 
+}
+
+/*p:hover { 
+    animation: shake 0.63s ;
+    transform: translate3d(0, 2px, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}*/
+
+@keyframes shake {
+    10%, 90% {
+      transform: translate3d(0, -1px, 0);
+    }
+    
+    20%, 80% {
+      transform: translate3d(0, 2px, 0);
+    }
+  
+    30%, 70% {
+      transform: translate3d(0, -2px, 0);
+    }
+  
+    40%, 50% {
+      transform: translate3d(0, 4px, 0);
+    }
+  }
+
+.titles {
+    padding-left:3px;
+}
+
+.titles:hover{
+    background-color:#0080a8;
+    color:rgb(238, 240, 134);
 }
 
 .window {
-    padding: 3%;
-    grid-column: 2/ span 1;
-    grid-row-start: 2;
+    padding: 1%;
+    margin-left: 18px;
+    margin-top:65px;
+    grid-column: 2/ span 5;
+    grid-row: 1 / span 4;
+    width:100%;
+    height:100%;
+    font-size:0.71em;
+    color: rgb(99, 98, 98);
+    background-color: $post_yellow;
+    //background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239C92AC' fill-opacity='0.1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
