--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <section class="wow slideInLeft"></section>
+  <section class="wow slideInRight"></section>
     <%= yield %>
   </body>
 </html>
