--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -17,7 +17,7 @@ body {
     display: none; 
 }
 
-.notes_logo{
+.notes_logo {
     margin-top: 10px;
     margin-left:13px;
     -webkit-box-shadow: 0 8px 6px -6px black;
@@ -96,6 +96,7 @@ body {
     &:active{
         background-image: url("./trash_closed.png"); 
     }
+
     &:focus{
         background-image: url("./trash_closed.png"); 
     }
@@ -108,6 +109,7 @@ textarea {
     border: none;
     outline: none;
     font-family: sans-serif;
+    font-size: 1.1em;
     height:100%;
 }
 
@@ -119,6 +121,74 @@ textarea {
     height:1000px;
     width:100%;
 }
+
+#appCopy {
+    display:grid;
+    background-color: $post_yellow;
+    grid-template-columns:  120px 180px 400px;
+    grid-template-rows: 80px 100px 400px 500px;
+    height:1000px;
+  
+    a{
+        font-size:0.6em;
+        color: rgb(99, 98, 98);
+    }
+    textarea{
+        width:700px!important;
+        color: rgb(99, 98, 98);
+        height:1000px;
+    }
+    #textWidth{
+        top:75px!important;
+        left:150px!important;
+        font-size:0.7em;
+        color: rgb(99, 98, 98)!important;
+    }
+    h2{
+        position:absolute;
+        left:40%;
+        top:10%;
+    }
+    form{
+        position:absolute;
+        left:40%;
+        top:30%;
+        color: rgb(99, 98, 98)!important;
+    }
+    
+}
+
+
+.bottom{
+    position: absolute;
+    bottom:1%;
+    font-size:0.8em;
+}
+.alert{
+    font-size:0.9em;
+    opacity:0;
+    position: absolute;
+    bottom:10px;
+    right:2%;
+    margin-bottom:0%;
+    font-size:0.7em;
+    color:rgb(117, 117, 117);
+    animation: fadeout 4s;
+
+}
+@keyframes fadeout {
+    from { opacity: 1; }
+    to   { opacity: 0.1; }
+}
+
+.mid{
+    position:absolute;
+    grid-column-start: 2;
+    right:40%!important;
+    top:20%;
+    font-size:0.9em!important;
+}
+
 
 .list {
     display:block;
@@ -198,7 +268,18 @@ textarea {
     background-color:#0080a8;
     color:rgb(238, 240, 134);
 }
-
+.editWindow{
+    padding: 1%;
+    margin-left: 18px;
+    margin-top:65px;
+    grid-column: 2/ span 5;
+    grid-row: 1 / span 4;
+    width:700px;
+    height:1000px;
+    font-size:0.71em;
+    color: rgb(99, 98, 98);
+    background-color: $post_yellow;   
+}
 .window {
     padding: 1%;
     margin-left: 18px;
@@ -211,4 +292,7 @@ textarea {
     color: rgb(99, 98, 98);
     background-color: $post_yellow;
     //background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%239C92AC' fill-opacity='0.1' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+#submitButton {
+    display:none;
 }
