--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: note, local: true) do |form| %>
+<%= form_with(model: note, local: true, id: 'textWidth') do |form| %>
   <% if note.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(note.errors.count, "error") %> prohibited this note from being saved:</h2>
@@ -11,22 +11,9 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :note_title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_field :content, id: :note_content %>
-  </div>
-
-  <div class="field">
-    <%= form.label :tags %>
-    <%= form.text_field :tags, id: :note_tags %>
-  </div>
+  <%= form.text_area :content%>
 
   <div class="actions">
-    <%= form.submit %>
+ <%=form.button :submits, id: "submitButton"%>
   </div>
 <% end %>
