--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,34 +1,6 @@
+<% if signed_in? %>
+        <%=link_to 'Logout', destroy_user_session_path, method: :delete, id:"login", class:"bottom" %>
 <div id="app"></div>
-<!--
-<p id="notice"><%= notice %></p>
-
-<h1>Notes</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th>Tags</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @notes.each do |note| %>
-      <tr>
-        <td><%= note.title %></td>
-        <td><%= note.content %></td>
-        <td><%= note.tags %></td>
-        <td><%= link_to 'Show', note %></td>
-        <td><%= link_to 'Edit', edit_note_path(note) %></td>
-        <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Note', new_note_path %>
--->
+<% else %>
+  <button onClick="window.location='<%=new_user_session_path%>';"  id="login" class="_button">Login/Sign-up</button>
+<% end %>
