--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -184,7 +184,7 @@ textarea {
 .mid{
     position:absolute;
     grid-column-start: 2;
-    right:40%!important;
+    left:40%!important;
     top:20%;
     font-size:0.9em!important;
 }
