--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -130,7 +130,7 @@ textarea {
     height:1000px;
   
     a{
-        font-size:0.8em;
+        font-size: 13px;
         color: rgb(99, 98, 98);
     }
     textarea{
